# cg-labs

./: CMakeLists.txt  README.md
cmake/: utils.cmake
lab02/: CMakeLists.txt  README.md  main.cpp  shapes.cpp  shapes.h
lab02-transformaciones/: CMakeLists.txt  README.md
lab03-transformaciones-escena/: CMakeLists.txt  Poligono.cpp  Primitives.h  README.md  main.cpp  teapot.cpp
lab04-transformaciones-jerarquicas/: CMakeLists.txt  README.md  main.cpp  math_utils.h  scene_hierarchical.h  scene_homogeneous.h
lab05-proyecciones-camara/: CMakeLists.txt  README.md  camera.h  main.cpp  scenes.h
shared/: OBJLoader.h  Poligono.cpp  Poligono.h  Primitives.h  lighting.h
